--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8071
+  port: 8180
 # 开发环境配置
 spring:
     profiles:
         active: dev
     data:
         hbase:
-            quorum: nn1,nn2,dn1,dn2,dn3,dn4,dn5
-            rootDir: hdfs://nn1:8020
+            quorum: 192.168.10.212:2181,192.168.10.216,192.168.10.219
+            rootDir: hdfs://192.168.10.212:9000
             nodeParent: /hbase
 
 
